compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/functionAndProperty/class.kt
// COMPARE_WITH_LIGHT_TREE

class C {
    <!CONFLICTING_JVM_DECLARATIONS!>val x<!> = 1
    <!CONFLICTING_JVM_DECLARATIONS!>fun getX()<!> = 1
}
